# dsqss

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  make_archive.sh
doc/: CMakeLists.txt
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/.doctrees/: environment.pickle  index.doctree
doc/_build/html/.doctrees/dla/users-manual/: generator.doctree  index.doctree  input.doctree  output.doctree
doc/_build/html/.doctrees/dsqss/: about_dsqss.doctree  algorithm.doctree  index.doctree  install.doctree  tutorial.doctree
doc/_build/html/.doctrees/en/: index.doctree
doc/_build/html/.doctrees/pmwa/tutorial/: input.doctree  intro.doctree  lattgene.doctree  model.doctree  output.doctree  reference.doctree  sample_Heisenberg.doctree  tu-index.doctree  tutorial.doctree  (+1 more)
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/dsqss/: about_dsqss.rst.txt  algorithm.rst.txt  index.rst.txt  install.rst.txt
doc/_build/html/_sources/en/: index.rst.txt
doc/_build/html/dla/users-manual/: generator.html  index.html  input.html  output.html
doc/_build/html/dsqss/: about_dsqss.html  algorithm.html  index.html  install.html  tutorial.html
doc/_build/html/en/: index.html
doc/_build/html/pmwa/tutorial/: input.html  intro.html  lattgene.html  model.html  output.html  reference.html  sample_Heisenberg.html  tu-index.html  tutorial.html  usage.html
doc/en/: CMakeLists.txt  about_dsqss.rst  algorithm.rst  conf.py  index.rst  install.rst  spelling_wordlist.txt  tutorial.rst
doc/en/dla/tutorial/: bosesquare.rst  index.rst  intro.rst  spinchain.rst  spindimer.rst  standard_mode
doc/en/dla/users-manual/: engine.rst  generator.rst  index.rst  input.rst  input_expert.rst  input_simple.rst  input_standard.rst  output.rst
doc/en/dsqss/: #usage.rst.org#  about_dsqss.rst  install.rst  usage.rst  usage.rst.org
doc/en/pmwa/tutorial/: input_file.rst  intro.rst  lattgene.rst  model.rst  output.rst  output_file.rst  sample_Heisenberg.rst  tu-index.rst  tutorial.rst  usage.rst
doc/en/tutorial/: intro.rst  model.rst  reference.rst  sample_Heisenberg.rst  tutorial.rst  usage.rst
doc/jp/: CMakeLists.txt  conf.py  index.rst
doc/jp/dla/tutorial/: bosesquare.rst  index.rst  intro.rst  spinchain.rst  spindimer.rst  standard_mode.rst
doc/jp/dla/users-manual/: engine.rst  generator.rst  index.rst  input.rst  input_expert.rst  input_simple.rst  input_standard.rst  output.rst
doc/jp/dsqss/: about_dsqss.rst  index.rst  install.rst
doc/jp/pmwa/tutorial/: input_file.rst  intro.rst  lattgene.rst  model.rst  output.rst  sample_Heisenberg.rst  tu-index.rst  tutorial.rst  usage.rst
src/dla/: CMakeLists.txt  accumulator.hpp  accumulator_set.hpp  algorithm.hpp  array.h  calctimer.hpp  cf.hpp  chainjob.hpp  ck.hpp  debug.hpp  displacement.hpp  displacements.hpp  dla.cc  dla.hpp  io.h  lattice.hpp  link.hpp  measure.hpp  measure_specific.cc  measure_specific.h  name.h  objects.hpp  parameter.hpp  random.cc  random.h  serialize.hpp  sf.hpp  util.hpp  wavevector.hpp  xml.h
src/dla/SPECIFIC/Boson/: measure_specific.cc  measure_specific.h
src/dla/SPECIFIC/Heisenberg/: measure_specific.cc  measure_specific.h
src/dla/generators/: CMakeLists.txt  boson_B.h  canonical.h  cfgene.cc  dla_alg.cc  dla_alg.h  exact_B.cc  exact_H.cc  lattgene_C.cc  lattgene_T.cc  matrix.h  sfgene.cc  spin_H.h
src/dla/generators/LATTICE/HyperCubic/: lattgene.cc
src/dla/generators/LATTICE/OpenCubic/: lattgene.cc
src/dla/generators/LATTICE/Triangular/: lattgene.cc
src/pmwa/: CMakeLists.txt  PMWA.cpp  configuration.cpp  graphspace.cpp  lattgene.cc  lattice.cpp  probability.B.cpp  probability.H.cpp  quantities.B.cpp  quantities.H.cpp  sfgene.cc  worm.h
src/pmwa/inc/: Configuration.h  Graph_functions.h  PMWA.h  Probability.h  Quantities.h  debug.hpp  lattice.hpp  simtype.h  systemparameter.h  xml.hpp
src/pmwa/lib/: CMakeLists.txt  My_rdm.boost.cpp  My_rdm.boost.h  My_rdm.gsl.cpp  My_rdm.gsl.h  My_rdm.hrd.cpp  My_rdm.hrd.h  random.cpp  random.h  stdma.cpp  stdma.h
test/: CMakeLists.txt
test/dla/: CMakeLists.txt  S_0.5_chain_1.json  S_0.5_chain_2.json  S_0.5_chain_3.json  S_0.5_chain_4.json  S_0.5_chain_5.json  S_0.5_triangle_1.json  S_1.0_chain_1.json  checkpoint.py  common.py  dimer_1.json  hardcore_bose_chain_1.json  hardcore_bose_chain_2.json  hardcore_bose_chain_3.json  honeycomb_1.json  kagome_1.json  nonhermite_1.json  pair_1.json  softcore_bose_chain_1.json  softcore_bose_chain_2.json  test.py  triangular_1.json
test/pmwa/: CMakeLists.txt  bose_chain_1.json  bose_ladder_1.json  common.py  spin_chain_1.json  test.py  test_pmwa_restart.py
test/pmwa/data/: CMakeLists.txt
test/pmwa/data/pmwa_annealing/: param.anneal.fail.in  param.anneal.in  std.in
test/pmwa/data/pmwa_restart/: param.in  param.restart.fail.in  param.restart.in
test/tool/: CMakeLists.txt  common.py  test_dsqss_pre_dla.py  test_dsqss_pre_pmwa.py  test_pmwa_pre.py
test/tool/data/: CMakeLists.txt
test/tool/data/dsqss_pre_dla_1D_Heisenberg/: lattice.xml  std.in
test/tool/data/dsqss_pre_dla_2D_Heisenberg/: algorithm.xml  hamiltonian.xml  lattice.xml  param.in  std.in
test/tool/data/dsqss_pre_pmwa_1D_Heisenberg/: lattice.xml  param.in  std.in
test/tool/data/dsqss_pre_pmwa_2D_Heisenberg/: std.in
tool/: CMakeLists.txt  dla_alg.py  dla_pre.py  dsqss_pre.py  dsqssvars.sh.in  hamgen.py  install_wheel.sh.in  latgen.py  pyproject.toml  setup.py
tool/cmake/: dla_alg.in  dla_hamgen.in  dla_latgen.in  dla_pgen.in  dla_pre.in  dla_wvgen.in  dsqss-2.0.0-py2.py3-none-any.whl  dsqssvars.sh.in  get_site_packages.py  install.sh.in  pmwa_pre.in
tool/dsqss/: __init__.py  algorithm.py  bosehubbard.py  displacement.py  dla_alg.py  dla_hamgen.py  dla_latgen.py  dla_pre.py  hamgen.py  hamiltonian.py  hypercubic.py  latgen.py  lattice.py  parameter.py  pmwa_pre.py  prob_kernel.py  read_keyvalues.py  result.py  std_lattice.py  std_model.py  util.py  wavevector.py  xxz.py
tool/dsqss/lattice_factory/: honeycomb.py  hypercubic.py  kagome.py  triangular.py
(+730 files in other folders)
