[tool.poetry]
name = "dsqss"
version = "2.1-dev"
description = "dsqss inputfile generator"
authors = ["DSQSS developers <dsqss-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

repository = "https://github.com/issp-center-dev/DSQSS"

packages = [
  { include = "dsqss" }
  ]

[tool.poetry.dependencies]
python = "^3.6"
# Users should install dependencies by themselves
# numpy = "^1.17"
# toml = ">= 0.10.0"
# scipy = "^1"
# typing_extension for python<3.8

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dla_hamgen = "dsqss.std_model:main"
dla_latgen = "dsqss.std_lattice:main"
dla_pgen = "dsqss.parameter:main"
dla_wvgen = "dsqss.wavevector:main"
dla_alg = "dsqss.dla_alg:main"
dla_pre = "dsqss.dla_pre:main"
pmwa_pre = "dsqss.pmwa_pre:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
